Secure API with Arcject

--- a/.env
+++ b/.env
@@ -7,3 +7,7 @@ LOG_LEVEL=info
 
 # Database configuration
 DATABASE_URL=postgresql://neondb_owner:npg_CGFZ3VR9yoAa@ep-bitter-cake-agddrwwh-pooler.c-2.eu-central-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+
+
+# ARCJECT_KEY
+ARCJET_KEY=ajkey_01k6dx07prftf9r9j9dt9q2kj5
